# algodiff

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: ClangTidy.cmake  algodiffConfig.cmake.in  install.cmake
docs/: Doxygen.cmake
examples/: CMakeLists.txt  derivative_example.cpp  jacobian_example.cpp
include/algodiff/: algodiff.hpp  dual_number.hpp  dual_number_eigen.hpp  dual_number_ops.hpp  forward_mode.hpp
python/: CMakeLists.txt
python/src/: python_bindings.cpp
src/: autoderiv.cpp  dual_number.cpp  dual_number_eigen.cpp  dual_number_ops.cpp  forward_mode.cpp
tests/: CMakeLists.txt
tests/src/: dual_number_test.cpp  forward_mode_derivative_test.cpp  forward_mode_function_test.cpp  forward_mode_multidimensional_derivative_test.cpp
